--- a/CaseStudy.Rmd
+++ b/CaseStudy.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r libraries, include = F}
 library(dplyr)
+library(plyr)
 library(magrittr)
 library(ggplot2)
 library(devtool)
@@ -29,16 +30,34 @@ data <- read.csv("Air_Traffic_Passenger_Statistics.csv")
 
 First, let's clean the data
 ```{r cleanup}
-names(data) <- c("date","operAirline","operCode","airline","code","geomSumm","region","type","category","terminal","area","pax")
+## Rename the column names
+names(data) <- c("date","operAirline","operCode","airline","code","isDomestic","region","type","category","terminal","area","pax")
 
+## Convert isDomestic to boolean
+data$isDomestic <- plyr::revalue(data$isDomestic,c("Domestic"=T,"International"=F))
+data$date <- as.character(data$date, stringAsFactors=F)
+
+## Break date into year and month
+data$year <- substr(data$date,1,4)
+data$month <- substr(data$date,5,6)
+## Find the year range of the data frame
+year_min <- min(as.numeric(data$year))
+year_max <- max(as.numeric(data$year))
+## Convert month to factor and label in English
+data$month <- factor(as.numeric(data$month),labels = c("January","February","March","April","May","June","July","August","September","October","November","December"),levels = 1:12,ordered = T)
+## Take out date
+data$date <- NULL
 
 ## operAirline = Operating Airline, the airline that really operating, some airline would own a child company to operate a single route
 ## operCode = Operating Airline Code
 ## airline = Published Airline, mother company airline
-## code = Published Airline Code
+## code = Published Airline Code, code for variable "airline"
 ## isDomestic: If the flight is domestic,T; if international: F
 ## region: Geom region
 ## type: activity type; Deplaned means arrival, Enplaned means departure, Thru / Transit is other 
 ## category: Airline price type; Low fare is Low cost carrier, else are others
+## terminal: SFO terminal
+## area: area within SFO terminal
+## pax: passenger count of given row
 ```
 
