--- a/CaseStudy.Rmd
+++ b/CaseStudy.Rmd
@@ -5,48 +5,52 @@ date: "3/28/2018"
 output: html_document
 ---
 
-
-
-```{r setup, include=FALSE}
+```{r setup, include = F}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r libraries, include = F}
-library(dplyr)
-library(plyr)
+```{r libraries, include = F, warning = F}
+library(tidyverse)
 library(magrittr)
+library(zoo)
 library(ggplot2)
-library(devtool)
-library(ggmap)
 library(maps)
 library(mapdata)
 ```
 
-```{r setup}
-setwd("/Users/jacquessham/Documents/GitHub/USF-BSDS100-CaseStudy")
+```{r init, include = F}
+## Set the working dir according to who is working
+wd <- getwd()
+if ("chunheisiu" %in% strsplit(wd, "/")[[1]]) {
+  setwd("/Users/chunheisiu/Dropbox/Documents/USF/2018_Spring/BSDS_100/USF-BSDS100-CaseStudy")
+} else {
+  setwd("/Users/jacquessham/Documents/GitHub/USF-BSDS100-CaseStudy")
+}
+
+## Read the data
 data <- read.csv("Air_Traffic_Passenger_Statistics.csv")
 ```
 
+First, let's clean the data.
 
-First, let's clean the data
 ```{r cleanup}
 ## Rename the column names
-names(data) <- c("date","operAirline","operCode","airline","code","isDomestic","region","type","category","terminal","area","pax")
+names(data) <- c("date", "operAirline", "operCode", "airline", "code", "isDomestic", "region", "type", "category", "terminal", "area", "pax")
 
 ## Convert isDomestic to boolean
-data$isDomestic <- plyr::revalue(data$isDomestic,c("Domestic"=T,"International"=F))
-data$date <- as.character(data$date, stringAsFactors=F)
+data$isDomestic %<>%
+  plyr::revalue(c("Domestic" = T, "International" = F))
 
-## Break date into year and month
-data$year <- substr(data$date,1,4)
-data$month <- substr(data$date,5,6)
-## Find the year range of the data frame
-year_min <- min(as.numeric(data$year))
-year_max <- max(as.numeric(data$year))
-## Convert month to factor and label in English
-data$month <- factor(as.numeric(data$month),labels = c("January","February","March","April","May","June","July","August","September","October","November","December"),levels = 1:12,ordered = T)
-## Take out date
-data$date <- NULL
+## Reformat the dates into Date objects
+data$date %<>% 
+  as.character(stringAsFactors = F) %>% 
+  as.yearmon("%Y%m") %>% 
+  as.Date()
+
+# Get min and max dates
+year_max <- max(data$date) %>% format("%Y") %>% as.numeric()
+year_min <- min(data$date) %>% format("%Y") %>% as.numeric()
+
 
 ## operAirline = Operating Airline, the airline that really operating, some airline would own a child company to operate a single route
 ## operCode = Operating Airline Code
