--- a/CaseStudy.Rmd
+++ b/CaseStudy.Rmd
@@ -22,10 +22,14 @@ library(grid)
 
 ```{r init, include = F}
 ## Set the working dir according to who is working
-if ("chunheisiu" %in% strsplit(getwd(), "/")[[1]]) {
+curr_wd <- strsplit(getwd(), "/")[[1]]
+if ("chunheisiu" %in% curr_wd) {
   setwd("/Users/chunheisiu/Dropbox/Documents/USF/2018_Spring/BSDS_100/USF-BSDS100-CaseStudy")
-} else {
+} else if ("jacquessham" %in% curr_wd){
   setwd("/Users/jacquessham/Documents/GitHub/USF-BSDS100-CaseStudy")
+} else {
+  wd <- readline(prompt = "You're not Jacques or Charles! Enter the path to the data: ")
+  setwd(wd)
 }
 
 ## Read the data
