--- a/CaseStudy.Rmd
+++ b/CaseStudy.Rmd
@@ -2,11 +2,11 @@
 title: "BSDS 100 Case Study"
 author: "Jacques Sham & Charles Siu"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, include = F}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = F)
 ```
 
 ```{r libraries, include = F, warning = F}
@@ -66,7 +66,8 @@ data %<>%
 # Remove data from 2005 for easy comparison
 data %<>% filter(year != 2005)
 
-data$region %<>% recode("Central America" = "Latin America", "South America" = "Latin America")
+data$region %<>% recode("Central America" = "Latin America",
+                        "South America" = "Latin America")
 
 ## operAirline = Operating Airline, the airline that really operating, some airline would own a child company to operate a single route
 ## operCode = Operating Airline Code
@@ -131,80 +132,105 @@ cities %<>%
 ```
 
 ```{r draw_map}
+# Geom objects for drawing static objects
 draw_sf_point <- geom_point(x = sf$long, y = sf$lat, color = "red", size = 3)
 
 draw_sf_label <- geom_text(aes(x = sf$long, y = sf$lat, label = "SFO"),
                            hjust = 1, nudge_x = -5, color = "red", size = 3)
 
-draw_color_legend <- scale_color_discrete(name = "Activity Type", labels = c("Arriving SFO", "Departing SFO"))
+draw_color_legend <- scale_color_discrete(name = "Activity Type",
+                                          labels = c("Arriving SFO", "Departing SFO"))
 
-remove_axes <- theme(
+draw_size_legend <- scale_size_continuous(trans = "log10", guide = F)
+
+# Functions for drawing curves, points and labels
+draw_flight_curve <- function(d) {
+  geom_curve(data = d %>% filter(type %in% c("Deplaned", "Enplaned")),
+                           aes(x = origin.long, y = origin.lat,
+                               xend = dest.long, yend = dest.lat,
+                               color = type, size = pax),
+                           curvature = 0.5, lineend = "round",
+                           alpha = 0.75, arrow = arrow(length = unit(0.025, "npc")))
+}
+
+draw_city_points <- function(d) {
+  return (geom_point(data = d, aes(x = long, y = lat), color = "black", size = 3))
+}
+
+draw_city_labels <- function(d) {
+  return (geom_text(data = d, aes(x = long, y = lat, label = region),
+                              hjust = 0, nudge_x = 3.5, nudge_y = -1,
+                              color = "black", size = 3))
+}
+
+draw_enplaned_labels <- function(d) {
+  return (geom_text(data = d %>% filter(type == ("Enplaned")),
+                    aes(x = long, y = lat, label = pax, color = type),
+                    hjust = 0, nudge_x = 3.5, nudge_y = -2.5, size = 3))
+}
+
+draw_deplaned_labels <- function(d) {
+  return (geom_text(data = d %>% filter(type == ("Deplaned")),
+                    aes(x = long, y = lat, label = pax, color = type),
+                    hjust = 0, nudge_x = 3.5, nudge_y = -4, size = 3))
+}
+
+format_theme <- theme(
   axis.text = element_blank(),
   axis.line = element_blank(),
   axis.ticks = element_blank(),
   panel.border = element_blank(),
   panel.grid = element_blank(),
-  axis.title = element_blank()
+  axis.title = element_blank(),
+  legend.position = "bottom",
+  legend.background = element_rect(fill = "gray90", size = 0),
+  legend.title = element_text(face = "bold")
   )
 ```
 
-```{r draw_na_map, fig.width = 10}
+```{r draw_na_map, fig.height = 8, fig.width = 10}
 cities_na <- cities %>% filter(region %in% c("US", "Canada", "Mexico"))
-
-draw_na_flight_curve <- geom_curve(data = cities_na %>% filter(type %in% c("Deplaned", "Enplaned")),
-                           aes(x = origin.long, y = origin.lat, xend = dest.long, yend = dest.lat,
-                               color = type, size = log(pax)),
-                           curvature = 0.5, lineend = "round", alpha = 0.5)
-
-draw_na_city_points <- geom_point(data = cities_na, aes(x = long, y = lat), color = "black", size = 3)
-
-draw_na_city_labels <- geom_text(data = cities_na, aes(x = long, y = lat, label = region),
-                              hjust = 0, nudge_x = 3.5, nudge_y = -1, color = "black", size = 3)
 
 world %>% 
   filter(region %in% c("USA", "Canada", "Mexico")) %>% 
   ggplot() +
   geom_polygon(aes(x = long, y = lat, group = group), fill = "darkgray") +
-  draw_na_city_points +
-  draw_na_flight_curve +
-  draw_na_city_labels +
+  draw_flight_curve(cities_na) +
+  draw_city_points(cities_na) +
+  draw_city_labels(cities_na) +
+  draw_enplaned_labels(cities_na) +
+  draw_deplaned_labels(cities_na) +
   draw_sf_point +
   draw_sf_label +
   coord_fixed(1.3) +
   theme_minimal() +
   draw_color_legend +
+  draw_size_legend +
   scale_fill_brewer(palette = "Set2") +
   scale_x_continuous(limits = c(-170, -50)) +
-  remove_axes
+  format_theme
 ```
 
-```{r draw_intl_map, fig.width = 10}
+```{r draw_intl_map, fig.height = 8, fig.width = 10}
 cities_intl <- cities %>% filter(!(region %in% c("US", "Canada", "Mexico")))
-
-draw_intl_flight_curve <- geom_curve(data = cities_intl %>% filter(type %in% c("Deplaned", "Enplaned")),
-                           aes(x = origin.long, y = origin.lat, xend = dest.long, yend = dest.lat,
-                               color = type, size = log(pax)),
-                           curvature = 0.5, lineend = "round", alpha = 0.5)
-
-draw_intl_city_points <- geom_point(data = cities_intl, aes(x = long, y = lat), color = "black", size = 3)
-
-draw_intl_city_labels <- geom_text(data = cities_intl, aes(x = long, y = lat, label = region),
-                              hjust = 0, nudge_x = 3.5, nudge_y = -1, color = "black", size = 3)
 
 world %>% 
   filter(region != "Antarctica") %>% 
   ggplot() +
   geom_polygon(aes(x = long, y = lat, group = group), fill = "darkgray") +
-  draw_intl_city_points +
-  draw_intl_flight_curve +
-  draw_intl_city_labels +
+  draw_flight_curve(cities_intl) +
+  draw_city_points(cities_intl) +
+  draw_city_labels(cities_intl) +
+  draw_enplaned_labels(cities_intl) +
+  draw_deplaned_labels(cities_intl) +
   draw_sf_point +
   draw_sf_label +
   coord_fixed(1.3) +
   theme_minimal() +
   draw_color_legend +
+  draw_size_legend +
   scale_x_continuous(limits = c(-170, 200)) +
   scale_y_continuous(limits = c(-60, 90)) +
-  remove_axes
+  format_theme
 ```
 
