Finishing drafting README and Part I Overview graphs
-README draft v1
-3 graphs are okay for overview

--- a/CaseStudy.Rmd
+++ b/CaseStudy.Rmd
@@ -114,10 +114,13 @@ Non_lcc_list <- data %>% filter(category=="Low Fare") %>% count(airline)
 data %>% filter(category=="Low Fare" & airline=="Air China")
 data %>% filter(airline=="Swissport USA")
 airline_count <- data %>% count(airline)
+pax_count <- data %>% filter(year==2017) %>% group_by(airline) %>% summarise(pax_total = sum(pax))
+
 ```
 
+I. Overview
 
-
+Overall passenger traffic between 2006 and 2017
 ```{r annual_pax_trend}
 data %>% 
   ggplot() +
@@ -127,16 +130,24 @@ data %>%
   scale_fill_discrete(name = "Month")
 ```
 
+Average passenger traffic between 2006 and 2017
 ```{r average_month_pax}
-data %>% group_by(isDomestic,month) %>% summarise(avg_pax = mean(pax)) %>% 
-  ggplot(aes(x=month,y=avg_pax,fill=isDomestic)) + theme_minimal() +  geom_bar(stat="identity",alpha=0.8) + labs(x="Month",y="Passengers") + scale_y_continuous(labels = comma) + 
+data %>% group_by(isDomestic,month) %>% summarise(avg_pax = round(mean(pax),digit =0)) %>% 
+  ggplot(aes(x=month,y=avg_pax,fill=isDomestic,label = avg_pax)) + theme_minimal() +  geom_bar(stat="identity",alpha=0.8) + labs(x="Month",y="Passengers") + scale_y_continuous(labels = comma) + 
   ggtitle("The Monthly Average Passengers Count") + theme(plot.title = element_text(hjust = 0.5)) +
   scale_fill_discrete(name = "Destination",label=c("International","Domestic")) +
-  theme(plot.title = element_text(size = 20, face = "bold"))
+  theme(plot.title = element_text(size = 20, face = "bold")) + geom_text(size = 4, position = position_stack(vjust = 0.85), colour = "white")
+```
+
+Activity Type
+```{r traffic_type}
+total_traffic <- data %>% summarise(total_traffic = sum(pax))
+data %>% group_by(type) %>% summarise(traffic = sum(pax)) %>% 
+  ggplot(aes(x="",y=traffic,fill=type)) + geom_bar(width =1,stat="identity") + coord_polar(theta = "y") +theme_void() +geom_text(aes(x=1,y=cumsum(traffic)-traffic/2,label=paste(100*round(traffic/total_traffic[1,1],digit=4),"%",sep=""))) + scale_fill_discrete(name= NULL, label=c("Arrival","Department","Transit")) + ggtitle("Airplane Activities") + theme(plot.title = element_text(hjust = 0.6,size=20,face="bold"))
 ```
 
 
-
+II. Destination
 
 ```{r map_setup}
 # Load the world map and cities
